[tool.poetry]
name = "dl-template"
version = "0.1.0"
description = ""
authors = ["박정민 <pjm14418@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = {version = "^2.5.0+cpu", source = "pytorch"}
torchvision = {version = "^0.20.0+cpu", source = "pytorch"}
torchaudio = {version = "^2.5.0+cpu", source = "pytorch"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
